samples/_failures_safe/1761138573_230384_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da19c462.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_da19c462.c:158:9: error: expected identifier at end of input
  158 |         switch (list->
      |         ^~~~~~
./samples/SAFE/__tmp_da19c462.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da19c462.c:158:9: error: expected declaration or statement at end of input
